<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        android:focusable="true"
        android:focusableInTouchMode="true"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:background="#EDEEEF"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.LoginActivity">

    <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints">

        <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar2"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/white"
                android:theme="@style/Widget.AppCompat.Light.ActionBar">

            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <ImageView
                        android:id="@+id/back"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@mipmap/back"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        tools:ignore="ContentDescription,MissingConstraints" />

                <TextView
                        android:id="@+id/title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:textSize="20sp"
                        android:text="@string/login_title"
                        android:textColor="@color/black" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="150dp"
            android:layout_marginBottom="120dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/shape_corner1"
            android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp">

            <TextView
                    android:id="@+id/login_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:text="@string/login_text"
                    android:textColor="@color/black"
                    android:textSize="23sp"
                    tools:ignore="MissingConstraints" />
        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/account_input_area"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="45dp"
                android:background="@drawable/shape_corner2"
                tools:ignore="MissingConstraints">

            <EditText
                    android:id="@+id/account_et"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="40dp"
                    android:layout_marginEnd="40dp"
                    android:maxLines="1"
                    android:maxLength="14"
                    android:gravity="center"
                    android:background="@null"
                    android:textCursorDrawable="@drawable/cursor_black"
                    android:hint="@string/login_account_hint_text"
                    android:inputType="text"
                    tools:ignore="Autofill" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/password_input_area"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/shape_corner2"
                tools:ignore="MissingConstraints">

            <ImageView
                    android:id="@+id/password_visible_switch"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/password_et"
                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    android:src="@mipmap/eye_close"
                    tools:ignore="ContentDescription" />

            <EditText
                    android:id="@+id/password_et"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="40dp"
                    android:layout_marginEnd="40dp"
                    android:maxLines="1"
                    android:maxLength="14"
                    android:gravity="center"
                    android:background="@null"
                    android:textCursorDrawable="@drawable/cursor_black"
                    android:hint="@string/login_password_hint_text"
                    android:inputType="textPassword"
                    tools:ignore="Autofill" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/buttons"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="10dp">

            <TextView
                    android:id="@+id/register_bt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:textColor="@color/black"
                    android:text="注册"
                    tools:ignore="HardcodedText,MissingConstraints" />

            <TextView
                    android:id="@+id/forget_password_bt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:textColor="@color/black"
                    android:text="忘记密码"
                    tools:ignore="HardcodedText,MissingConstraints" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
                android:id="@+id/login_bt"
                android:layout_width="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="20dp"
                android:layout_height="45dp"
                android:gravity="center"
                android:textSize="20sp"
                android:enabled="false"
                android:textColor="@color/white"
                android:background="@drawable/shape_corner3"
                android:text="@string/login_bt_text"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>